--- a/src/app/shared/atoms/circle-progress/circle-progress.component.css
+++ b/src/app/shared/atoms/circle-progress/circle-progress.component.css
@@ -1,12 +1,15 @@
 .progress{
+    border-radius: 50%;
     display: flex;
+    height: 100%;
     justify-content: center;
     position: relative;
+    width: 100%;
 }
 
 .progress__background{
-    height: 4rem;
-    width: 4rem;
+    height: 100%;
+    width: 100%;
     top: 0;
 }
 
@@ -15,14 +18,14 @@
     border-radius: 50%;
     display: flex;
     flex-direction: column;
-    height: 4rem;
+    height: 100%;
     justify-content: center;
     margin: auto;
     position: absolute;   
     transition: stroke-dashoffset .3s;
     transform: rotate(-90deg);
     transform-origin: 50% 50%;
-    width: 4rem;
+    width: 100%;
 
 }
 
@@ -36,42 +39,36 @@
     width: 100%;
     top: 0;
     left: 0;
-    
 }
+
 .progress__text{
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 2rem;
+
 }
+
 .progress__potential-limit{
     color: var(--theme-color-text-02);
     font-size: .6rem;
 }
 
+.circle{
+    stroke-width:.5rem; 
 
-
-
-/* @media (min-width: 360px) and (max-width: 414px){
-    .progress__background {
-        width: 64px;
-    }
-    .progress__circle{
-
-        width: 64px;
-        height: 64px;
-    }
-
-}
-@media screen and (min-width: 415px){
-    .progress__background {
-        width: 72px;
-    }
-    
-    .progress__circle{
-        width: 72px;
-        height: 72px;
-    }
-
+    fill: none;
+    stroke-linecap:round;
+    stroke-dasharray: 295.31; 
+    stroke-dashoffset: 0;
 }
 
-circle{
-    margin: auto;
-} */
+.circle--active{
+    stroke-width:.5rem;
+    stroke: url(#grad);
+}
+
+.circle--bg{
+    stroke: var(--theme-color-background-default);
+    fill: var(--theme-color-background-03);
+}
+
