--- a/src/app/shared/components/month-challenges/month-challenges.component.css
+++ b/src/app/shared/components/month-challenges/month-challenges.component.css
@@ -1,13 +1,58 @@
-.month-challenges{
-    background-color: #fff;
+.tabs{
     display: grid;
-    gap:1em;
-    overflow: auto
+    gap: .5rem;
+    grid-auto-flow: column;
+    grid-auto-columns: 7rem;
+    max-width: 327PX; 
+    margin: 0 1rem 1.5rem 1rem;
+    width: 100%;
+    overflow: auto;
+}
+
+.tabs::-webkit-scrollbar{
+    display: none;
+}
+
+.month-challenges{
+    background-color: var(--theme-color-background-03);
+    box-shadow: 0px 6px 14px rgba(32, 45, 81, 0.05);
+    border-radius: 16px;
+    display: grid;
+    gap:1.5rem;
+    margin: 0 1rem;
+    overflow: auto;
+    padding-bottom: 1.5rem;
+    position: relative;
+}
+
+.time-remaining{
+    color: var(--theme-color-text-01);
+    background: linear-gradient(99.84deg, #FF1D53 0%, #A540D7 86.96%);
+    border-radius: 0px 14px 0px 9px;
+    font-size: .75rem;
+    right: 0;
+    padding: .25rem .75rem;
+    position: absolute;
+    top: 0;
+}
+
+.time-remaining__days{
+    font-weight: 700;
 }
 
 .month-challenges__title{
     font-size: 1.25rem;
-    padding: 1rem;
+    padding: 1rem 0 0 1rem;
+}
+
+.challenges{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
+    margin: 0 1.5rem;
+    row-gap: 1.5rem;
+    
+
 }
 
 
