--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -1,10 +1,22 @@
+<div class="tabs">
+    <lu-tab></lu-tab>
+    <lu-tab></lu-tab>
+    <lu-tab></lu-tab>
+    <lu-tab></lu-tab>
+    <lu-tab></lu-tab>
+    <lu-tab></lu-tab>
+</div>
+
 <div class="month-challenges">
-    <h2 class="month-challenges__title">Retos a conseguir</h2>
-    <sn-element-list></sn-element-list>
-    <sn-element-list></sn-element-list>
-    <sn-element-list></sn-element-list>
-    <sn-element-list></sn-element-list>
-    <sn-element-list></sn-element-list>
+    <div class="time-remaining">
+        <span class="time-remaining__text"> Faltan: <span class="time-remaining__days">15 días</span> </span>
+    </div>
+    <h2 class="month-challenges__title">Retos por completar</h2>
+    <div class="challenges">
+        <sn-challenge></sn-challenge>
+        <sn-challenge></sn-challenge>
+        <sn-challenge></sn-challenge>
+    </div>
 </div>
 
 
