--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,11 @@
 
 :root{
     --theme-color-primary-05:#000000ff;
+    --theme-color-background-gradient-likeu:linear-gradient(99.84deg, #FF1D53 0%, #A540D7 86.96%);
     --theme-color-background-default:#F2F2F2FF;
+    --theme-color-background-default2:rgba(255, 255, 255, 0.7);;
+    --theme-color-background-03:#FFFFFFFF;
+    --theme-color-text-01:#FFFFFFFF;
     --theme-color-text-02:#595959FF;
     --theme-color-text-03:#999999FF;
     --theme-color-primary-01:#EC0000FF;
@@ -11,7 +15,7 @@
 }
 
 body{
-    background-color: #ccc;
+    background-color: #F5F7FA;
     margin:auto;
     width: 375px;
     font-size: 12px;
