--- a/src/app/shared/atoms/tab/tab.component.css
+++ b/src/app/shared/atoms/tab/tab.component.css
@@ -16,3 +16,9 @@
 .tab__icon{
     margin-right: .25rem;
 }
+
+.tab--disabled{
+    background:transparent;
+    border: 1px solid var(--theme-color-ui-04);
+    color: var(--theme-color-text-03);
+}
