--- a/src/app/shared/atoms/tab/tab.component.html
+++ b/src/app/shared/atoms/tab/tab.component.html
@@ -1,4 +1,7 @@
-<button class="tab">
+<button [ngClass]="{
+    'tab':true,
+    'tab--disabled':(tab.status!=='ONGOING')
+}">
     <img class="tab__icon" [src]="'../../../../assets/icons/'+icon+'.svg'" alt="">
     <span class="tab__text">{{tab.texto}}</span>
 </button>
