--- a/src/app/shared/atoms/circle-progress/circle-progress.component.css
+++ b/src/app/shared/atoms/circle-progress/circle-progress.component.css
@@ -1,5 +1,6 @@
 .progress{
     border-radius: 50%;
+    box-shadow: 0px 10px 16px rgba(153, 153, 153, 0.25);
     display: flex;
     height: 100%;
     justify-content: center;
