--- a/src/app/shared/components/card-data/card-data.component.html
+++ b/src/app/shared/components/card-data/card-data.component.html
@@ -1,10 +1,11 @@
 <div class="card-data">
-    <sn-round-card [principalText]="3000" [secondaryText]="'Tu crédito actual'"></sn-round-card>
+    
+    <sn-round-card [principalText]="data.current_limit.amount" [secondaryText]="'Tu crédito actual'"></sn-round-card>
 
     <div class="percent">
         <sn-circle-progress [percent]="50" [icon]="'../../../../assets/icons/trophy.svg'"></sn-circle-progress>
     </div>
 
-    <sn-round-card [principalText]="'3/6'" [secondaryText]="'Misiones restantes'"></sn-round-card>
+    <sn-round-card [principalText]="data.potential_limit.amount" [secondaryText]="'Crédito potencial'"></sn-round-card>
 
 </div>
