question component, header

--- a/src/app/shared/atoms/question/question.component.html
+++ b/src/app/shared/atoms/question/question.component.html
@@ -1,1 +1,4 @@
-<p>question works!</p>
+<div class="question">
+    <span class="question__text">Pregunta</span>
+    <sn-icon icon="sn-SMOV006"></sn-icon>
+</div>
