--- a/src/app/shared/components/frequently-questions/frequently-questions.component.html
+++ b/src/app/shared/components/frequently-questions/frequently-questions.component.html
@@ -1,1 +1,7 @@
-<p>frequently-questions works!</p>
+<div class="frequently-questions">
+    <h2>Preguntas Frecuentes</h2>
+    <app-question></app-question>
+    <app-question></app-question>
+    <app-question></app-question>
+    <app-question></app-question>
+</div>
