--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="challenge-likeu">
     <ng-container *ngIf="cardDetail">
         <app-card-data [data]="cardDetail"></app-card-data>
