--- a/src/app/shared/components/frequently-questions/frequently-questions.component.css
+++ b/src/app/shared/components/frequently-questions/frequently-questions.component.css
@@ -1,6 +1,7 @@
 .frequently-questions{
     background:var(--theme-color-background-03);
     border-radius: 1rem;
+    box-shadow: 0px 6px 14px rgba(32, 45, 81, 0.05);
     display: grid;
     gap: .5rem;
     margin: 0 1rem;
