--- a/src/app/pages/message/message.component.css
+++ b/src/app/pages/message/message.component.css
@@ -15,6 +15,7 @@ sn-icon{
     align-items: center;
     background: var(--theme-color-background-03);
     border-radius: 50%;
+    box-shadow: 0px 32px 32px -4px rgba(0, 0, 0, 0.12);
     display: flex;
     justify-content: center;
     height: 6.5rem;
