--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -2,11 +2,13 @@
 .modal-bg{
     background-color: var(--theme-color-neutral-02);
     display: flex;
-    height: 100vh;   
+    height: 100%;   
     justify-content: center;
+    position: absolute;
     right: 0;
-    width: 100vw;
-    z-index: 0;
+    top: 0;
+    width: 100%;
+    z-index: 100;
 }
 
 .modal{
@@ -17,7 +19,7 @@
     max-width: 375px;
     padding: 3rem 1.25rem 2rem 1.25rem;
     position: relative;
-    z-index: 10;
+
 }
 
 .modal__btn-cerrar{
