Agregada la funcionalidad de los challenges, y del modal

--- a/src/app/shared/atoms/challenge/challenge.component.html
+++ b/src/app/shared/atoms/challenge/challenge.component.html
@@ -1,6 +1,6 @@
 <div class="challenge">
     <div class="challenge__content">
-        <img class="challenge__img" src="../../../../assets/icons/card.svg" alt="">
+        <img class="challenge__img" [src]="'../../../../assets/icons/'+icon+'.svg'" alt="">
     </div>
-    <h3 class="challenge__title">Conoce tu tarjeta</h3>
+    <h3 class="challenge__title">{{title}}</h3>
 </div>
