--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -2,10 +2,18 @@
 <ng-container *ngIf="cardDetail">
     <div class="challenge-likeu">
         <app-card-data [data]="cardDetail"></app-card-data>
-        <app-month-challenges (openModal)="showModal=true" [periodData]="periods" [tabs]="tabs"></app-month-challenges>
+        <app-month-challenges 
+         [mandatoryChallenges]="mandatoryChallenges" 
+         [optionalChallenges]="optionalChallenges" 
+         [tabs]="tabs"
+         (indexTab)="getChallenges($event)"
+         (challengeActive)="challengeActive=$event"
+         (openModal)="showModal=true"
+        >
+        </app-month-challenges>
         <app-frequently-questions></app-frequently-questions>
     </div>
 </ng-container>
 
-<app-modal *modal="showModal" (closeModal)="showModal=$event"></app-modal>
+<app-modal *modal="showModal" [data]="challengeActive" (closeModal)="showModal=$event"></app-modal>
     
