--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -4,7 +4,7 @@
     display: flex;
     height: 100%;   
     justify-content: center;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     width: 100%;
