--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -1,14 +1,14 @@
 <div #modal class="modal-bg">
     <div class="modal">
-        <button class="modal__btn-cerrar" (click)="closeModal.emit(false)">{{data.btnClose}}</button>
+        <button class="modal__btn-cerrar" (click)="closeModal.emit(false)">Cerrar</button>
         <div class="modal__header">
-            <img [src]="data.icon" alt="icono">
-            <h2 class="modal__title">{{data.title}}</h2>
-            <span class="modal__subtitle">{{data.subtitle}}</span>            
+            <img [src]="'../../../../assets/icons/'+data.icon+'.svg'"  alt="icono">
+            <h2 class="modal__title">{{data.name}}</h2>
+            <span class="modal__subtitle">{{data.description}}</span>            
         </div>
         <ul>
-            <ng-container *ngFor="let element of data.body">
-                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, possimus!</li>
+            <ng-container *ngFor="let condition of data.conditions">
+                <li>{{condition}}</li>
             </ng-container>
         </ul>
     </div>
