--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -11,5 +11,6 @@
                 <li>{{condition}}</li>
             </ng-container>
         </ul>
+        <button *ngIf="data.redirection">Continuar</button>
     </div>
 </div>
