--- a/src/app/shared/atoms/question/question.component.css
+++ b/src/app/shared/atoms/question/question.component.css
@@ -1,14 +1,34 @@
 .question{
-    align-items: center;
     background: #F3F8FA;
     border-radius: 14px;
+    width: 100%;
+    transition: all ease .3s;
+}
+.question__header{
     display: flex;
     justify-content: space-between;
     padding: 1.5rem 1.25rem;
-    width: 100%;
 }
+
 .question__text{
     font-size: 1rem;
+    font-weight: 700;
+}
+
+.question__body{
+    font-size: .875rem;
+    padding: 0 1.25rem 1.5rem;
+}
+
+.question__answer{
+    margin-bottom: 1.5rem;
+}
+
+.question__aditional{
+    color: var(--theme-color-text-03);
+}
+
+.question__link{
     font-weight: 700;
 }
 
@@ -18,5 +38,7 @@ sn-icon{
 }
 
 sn-icon>i[class^=sn-]{
-    color: linear-gradient(99.84deg, #FF1D53 0%, #A540D7 86.96%);
+    background: linear-gradient(99.84deg, #FF1D53 0%, #A540D7 86.96%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
