cambios en los tabs, y analisis de las validaciones de los challenges

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -4,7 +4,7 @@
         <app-card-data [data]="cardDetail"></app-card-data>
         <app-month-challenges 
          [mandatoryChallenges]="mandatoryChallenges" 
-         [optionalChallenges]="optionalChallenges" 
+         [optionalChallenges]="specialChallenges" 
          [tabs]="tabs"
          (indexTab)="getChallenges($event)"
          (challengeActive)="challengeActive=$event"
