--- a/src/app/shared/atoms/challenge/challenge.component.html
+++ b/src/app/shared/atoms/challenge/challenge.component.html
@@ -3,4 +3,5 @@
         <img class="challenge__img" [src]="'../../../../assets/icons/'+icon+'.svg'" alt="">
     </div>
     <h3 class="challenge__title">{{title}}</h3>
+    <img [src]="'../../../../assets/icons/'+(status)?'check-challenge':''+'.svg'" alt="">
 </div>
