--- a/src/app/shared/components/month-challenges/month-challenges.component.css
+++ b/src/app/shared/components/month-challenges/month-challenges.component.css
@@ -45,13 +45,17 @@ lu-tab{
 .challenges__title{
     font-size: 1.25rem;
     padding: 1rem 0 0 0;
+    margin-bottom: 1rem;
+}
+
+.challenge__description{
+    margin-bottom: 2rem;
 }
 
 .challenges{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: space-between;
-    margin-top:  1.5rem;
     margin-bottom:  1rem;
     row-gap: 1.5rem;
 }
