--- a/src/app/shared/atoms/challenge/challenge.component.css
+++ b/src/app/shared/atoms/challenge/challenge.component.css
@@ -15,6 +15,7 @@
     max-width: 100px;
     min-height: 100px;
     min-width: 100px;
+    position: relative;
 
 }
 
@@ -23,4 +24,10 @@
     font-size: 1rem;
     line-height: 150%;
     text-align: center;
+}
+
+.challenge__check{
+    right: -1.125rem;
+    top: -1rem;
+    position: absolute;
 }
