--- a/src/app/shared/atoms/challenge/challenge.component.html
+++ b/src/app/shared/atoms/challenge/challenge.component.html
@@ -1,7 +1,7 @@
 <div class="challenge">
     <div class="challenge__content">
         <img class="challenge__img" [src]="'../../../../assets/icons/'+icon+'.svg'" alt="">
+        <img *ngIf="status" class="challenge__check" [src]="'../../../../assets/icons/check-challenge.svg'" alt="">
     </div>
     <h3 class="challenge__title">{{title}}</h3>
-    <img [src]="'../../../../assets/icons/'+(status)?'check-challenge':''+'.svg'" alt="">
 </div>
