--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -1,12 +1,17 @@
 <app-header></app-header> 
 <ng-container *ngIf="cardDetail" >
     <div class="challenge-likeu">
-        <app-card-data [data]="cardDetail"></app-card-data>
+        <app-card-data 
+            [data]="cardDetail"
+            [percent]="getPercent()"
+        >
+        </app-card-data>
         <app-month-challenges 
          [mandatoryChallenges]="mandatoryChallenges" 
          [optionalChallenges]="specialChallenges" 
          [tabs]="tabs"
          (indexTab)="getChallenges($event)"
+         [activeTab]="currentPeriod"
          (challengeActive)="challengeActive=$event"
          (openModal)="showModal=true"
         >
