manejo de errores mediante interceptor, y mostrar el modal del error

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -22,6 +22,4 @@
 
 <app-modal *show="showModal" [data]="challengeActive" (closeModal)="showModal=$event"></app-modal>
     
-<!-- <ng-template #spinner>
-    <sn-spinner></sn-spinner>
-</ng-template> -->
+<app-error-dialog *ngIf="showError"></app-error-dialog>
