--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -21,6 +21,7 @@
     </div>
     <div *ngIf="optionalChallenges.length>0" class="special-challenges">
         <h2 class="challenges__title">Retos especiales</h2>
+        <p class="challenge__description">Completa cualquiera de las misiones para aumentar tu límite de crédito.   </p>
         <div class="challenges">
             <ng-container *ngFor="let challenge of optionalChallenges">
                 <sn-challenge [title]="challenge.name" [icon]="challenge.icon" (click)="openModal.emit($event)" (click)="challengeActive.emit(challenge)"></sn-challenge>  
