--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,15 @@ sn-icon>i[class^=sn-]{
     color: var(--theme-color-primary-01);
 }
 
+.modal__btn-cerrar{
+    background: none;
+    border: none;
+    color: var(--theme-color-text-06);
+    position: absolute;
+    right: 1.5rem;
+    top: .875rem;
+}
+
 @media screen and (min-width: 320px) {
     .percent__circle{
 
