--- a/src/app/shared/atoms/error-dialog/error-dialog.component.html
+++ b/src/app/shared/atoms/error-dialog/error-dialog.component.html
@@ -1,4 +1,8 @@
-<div class="error-dialog">
+<div [ngClass]="{
+    'error-dialog':true
+    }" 
+    animation="up"
+>
     <img class="error-dialog__img" src="../../../../assets/icons/cloud-error.svg" alt="">
     <span class="error-dialog__title">¡Oh, oh!</span>
     <p class="error-dialog__description">No pudimos atender tu solicitud por ahora. Inténtalo después.</p>
