--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div #modal class="modal-bg">
-    <div class="modal">
+    <div animation="zoomIn" class="modal">
         <button class="modal__btn-cerrar" (click)="closeModal.emit(false)">Cerrar</button>
         <div class="modal__header">
             <img [src]="'../../../../assets/icons/'+data.icon+'.svg'"  alt="icono">
