--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -17,12 +17,13 @@
     box-shadow: 0px 6px 14px rgba(153, 153, 153, 0.3);
     margin: 5.5rem 1.5rem;
     max-width: 375px;
-    padding: 3rem 1.25rem 2rem 1.25rem;
+    padding: 3rem 1.25rem 4.625rem 1.25rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
-
-
 
 .modal__header{
     display: grid;
@@ -38,4 +39,8 @@
 }
 .modal__subtitle{
     color: var( --theme-color-text-03);
+}
+
+.modal__btn-continuar{
+    align-self: center;
 }
