--- a/src/app/shared/atoms/question/question.component.html
+++ b/src/app/shared/atoms/question/question.component.html
@@ -5,7 +5,7 @@
             [icon]="(showAnswer)?'sn-SMOV007':'sn-SMOV006'"></sn-icon>
     </div>
 
-    <div *show="showAnswer" class="question__body">
+    <div #answer animation="dropDown" [dropDown]="showAnswer" class="question__body">
         <p class="question__answer">{{question.answer}}</p>
         <span *ngIf="question.additionalInfo" class="question__aditional">
             {{question.additionalInfo}}
