--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -6,8 +6,8 @@
 
 <div class="general-challenges">
 
-    <div class="time-remaining">
-        <span class="time-remaining__text"> Faltan: <span class="time-remaining__days">15 días</span></span>
+    <div *ngIf="days!==null" class="time-remaining">
+        <span class="time-remaining__text"> Faltan: <span class="time-remaining__days">{{days}} días</span></span>
     </div>
 
     <div class="normal-challenges">
@@ -24,7 +24,7 @@
         <p class="challenge__description">Completa cualquiera de las misiones para aumentar tu límite de crédito.   </p>
         <div class="challenges">
             <ng-container *ngFor="let challenge of optionalChallenges">
-                <sn-challenge [title]="challenge.name" [icon]="challenge.icon" (click)="openModal.emit($event)" (click)="challengeActive.emit(challenge)"></sn-challenge>  
+                <sn-challenge animation="zoomIn" [title]="challenge.name" [icon]="challenge.icon" (click)="openModal.emit($event)" (click)="challengeActive.emit(challenge)"></sn-challenge>  
             </ng-container>
         </div>
     </div>
