--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="cardDetail" >
-    <app-header></app-header> 
+    <app-header animation="up"></app-header> 
     <div class="challenge-likeu">
         <app-card-data 
             [data]="cardDetail"
@@ -23,4 +23,3 @@
 
 <app-modal *show="showModal" [data]="challengeActive" (closeModal)="showModal=$event"></app-modal>
     
-<app-error-dialog *ngIf="showError"></app-error-dialog>
