--- a/src/app/pages/message/message.component.html
+++ b/src/app/pages/message/message.component.html
@@ -10,7 +10,7 @@
     <h3 class="content__title">¡Lo sentimos!</h3>
     <h3 class="content__subtitle">No has logrado completar el reto LikeU</h3>
     <p class="content__description">Desafortunadamente no podrás continuar participando en el reto. Recuerda que puedes continuar usando tu tarjeta.</p>
-    <button sn-button>Continuar</button>
+    <button routerLink="/" sn-button>Continuar</button>
 </div>
 
 
