Se quito el ng flame

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <sn-icon icon="sn-SMOV004"></sn-icon>
+    <!-- <sn-icon icon="sn-SMOV004"></sn-icon> -->
     <h2>Reto LikeU</h2>
-    <sn-icon icon="sn-CHAN025"></sn-icon>
+    <!-- <sn-icon icon="sn-CHAN025"></sn-icon> -->
 </div>
