--- a/src/app/pages/message/message.component.html
+++ b/src/app/pages/message/message.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <sn-icon icon="sn-BAN005"></sn-icon>
+    <!-- <sn-icon icon="sn-BAN005"></sn-icon> -->
 
     <div class="header__icon">
         <img src="../../../assets/icons/oh-no.svg" alt="">
