Revert "Merge branch 'presentation-layer' into 'development'"
This reverts merge request !12

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -10,8 +10,8 @@
          [mandatoryChallenges]="mandatoryChallenges" 
          [optionalChallenges]="specialChallenges" 
          [tabs]="tabs"
-         [days]="remainingDays"
-         (indexTab)="getChallenges($event);indexTab=$event"
+         [days]="getDays(cut_of_day)"
+         (indexTab)="getChallenges($event);index=$event"
          [activeTab]="currentPeriod"
          (challengeActive)="challengeActive=$event"
          (openModal)="showModal=true"
