--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -17,6 +17,6 @@
                 </ng-container>
             </ul>
         </div>
-        <button class="modal__btn-continuar" sn-button *ngIf="data.redirection">Continuar</button>
+        <button class="modal__btn-continuar" *ngIf="data.redirection">Continuar</button>
     </div>
 </div>
