--- a/src/app/shared/atoms/question/question.component.css
+++ b/src/app/shared/atoms/question/question.component.css
@@ -20,11 +20,9 @@
     padding: 0 1.25rem 1.5rem;
 }
 
-.question__answer{
-    margin-bottom: 1.5rem;
-}
-
 .question__aditional{
+    display: block;
+    margin-top: 1.5rem;
     color: var(--theme-color-text-03);
 }
 
