--- a/src/app/shared/atoms/question/question.component.html
+++ b/src/app/shared/atoms/question/question.component.html
@@ -1,9 +1,7 @@
 <div class="question">
     <div (click)="show()" class="question__header">
         <span class="question__text">{{question.question}}</span>
-        <!-- <sn-icon 
-            [icon]="(showAnswer)?'sn-SMOV007':'sn-SMOV006'">
-        </sn-icon> -->
+        <img class="question__chevron" animation="rotate" deg="90" src="../../../../assets/icons/chevron-gradient.svg" alt="">
     </div>
 
     <div *show="showAnswer" class="question__body">
