--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -10,7 +10,7 @@
          [mandatoryChallenges]="mandatoryChallenges" 
          [optionalChallenges]="specialChallenges" 
          [tabs]="tabs"
-         [days]="getDays(cut_of_day)"
+         [days]="getDays(cutOfDay)"
          (indexTab)="getChallenges($event);indexTab=$event"
          [activeTab]="currentPeriod"
          (challengeActive)="challengeActive=$event"
