--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 :root{
     --theme-color-background-gradient-likeu:linear-gradient(99.84deg, #FF1D53 0%, #A540D7 86.96%);
     --theme-color-background-default:#F2F2F2FF;
-    --theme-color-background-default2:rgba(255, 255, 255, 0.7);;
+    --theme-color-background-default2:rgba(255, 255, 255, 0.7);
     --theme-color-background-03:#FFFFFFFF;
     --theme-color-primary-01:#EC0000FF;
     --theme-color-primary-05:#000000ff;
@@ -94,39 +94,6 @@ sn-icon>i[class^=sn-]{
     right: 1.5rem;
     top: .875rem;
 }
-
-@media screen and (min-width: 320px) {
-    .percent__circle{
-
-        width: 64px;
-        height: 64px;
-    }
-}
-  
-@media screen and (min-width: 360px) {
-    body{
-        font-size: 16px;
-    }
-}
-
-@media screen and (min-width: 375px) {
-
-}
-@media screen and (min-width: 415px) {
-    .circle_svg{
-        height: 72px;
-        width: 72px;
-    }
-}
-
-@media screen and (min-width: 512px) {
-
-}
-
-@media screen and (min-width: 768px) {
-
-}
-
 
 
 /*Animation styles*/
