--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -13,6 +13,6 @@
                 </ng-container>
             </ul>
         </div>
-        <button class="modal__btn-continuar" *ngIf="data.redirection">Continuar</button>
+        <button class="btn" *ngIf="data.redirection">Continuar</button>
     </div>
 </div>
