--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,16 @@ sn-icon>i[class^=sn-]{
     top: .875rem;
 }
 
+.btn{
+    align-self: center;
+    background-color: var(--theme-color-primary-01);
+    border: none;
+    border-radius: 3rem;
+    color: var(--theme-color-text-01);
+    font-weight: 700;
+    padding: 0.75rem 1.5rem;
+}
+
 
 /*Animation styles*/
 
